# Zephyr_BLE_buzzer

./: CMakeLists.txt  README.MD  nrf52840dk_nrf52840.overlay  prj.conf
src/: battery.c  battery.h  buzzer.c  buzzer.h  main.c
src/ble/: bluetoothle.c  bluetoothle.h  gatt_bas.c  gatt_bas.h  gatt_custom.c  gatt_custom.h
